[package]
name = "block-issue-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
anyhow = "1.0"
async-trait = "0.1.73"
starknet = "0.10.0"
url = "2.3.1"
regex = "1.9.1"
mockall = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.17"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
version-compare = "0.1"
